<resources>
    <string name="app_name">SinevaRobot</string>
    <string name="select_network">选取网络</string>
    <string name="wireless_network">无线网络</string>
    <string name="wifi_setting">WiFi设置</string>
    <string name="charge_check">目标检测</string>
    <string name="thing">物</string>
    <string name="people">人</string>
    <string name="distance">距离:</string>
    <string name="single_control">单点控制</string>
    <string name="single_point">单点</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="setting">设置</string>
    <string name="guide_scene_setting">导览场景设置</string>
    <string name="guest_scene_setting">迎宾场景设置</string>
    <string name="ask_question_setting">问答设置</string>
    <string name="map_setting">地图设置</string>
    <string name="base_setting">基本设置</string>
    <string name="position_point_setting">位置点信息设置</string>
    <string name="map_manage">地图管理</string>
    <string name="add">新增</string>
    <string name="remove">移除</string>
    <string name="charge_point">充电桩</string>
    <string name="electronic_fence">电子围栏</string>
    <string name="map_display">地图显示</string>
    <string name="lidar">激光雷达</string>
    <string name="led_setting">灯带设置</string>
    <string name="chargeing">充电时：</string>
    <string name="red_color">红色</string>
    <string name="full_charged">电满时：</string>
    <string name="green_color">绿色</string>
    <string name="no_charge">没电时：</string>
    <string name="blue_color">蓝色</string>
    <string name="normal_use">正常使用时：</string>
    <string name="purple_color">紫色</string>
    <string name="mileage_info">里程信息显示</string>
    <string name="move_speed_info">运动速度显示</string>
    <string name="ultrasonic_info">底盘超声波</string>
    <string name="distance_info">距离信息显示</string>
    <string name="voice">语音</string>
    <string name="handle">操作</string>
    <string name="initial_point_setting">初始点设置</string>
    <string name="initial_point">初始点</string>
    <string name="head_control">头部控制</string>
    <string name="up_down_speed">上下速度</string>
    <string name="right_left_speed">左右速度</string>
    <string name="begin_guide">开始导览</string>
    <string name="begin_guest">开始迎宾</string>
    <string name="self_charge">自主回充</string>
    <string name="bottom_control">底盘控制</string>
    <string name="voice_reset">语音复位</string>
    <string name="shutdown">关机</string>
    <string name="led_test">灯带测试</string>
    <string name="target_check">目标检测</string>
    <string name="stop">停止</string>
    <string name="scene_name">场景名称</string>
    <string name="interval_time">间隔时间</string>
    <string name="default_scene">默认场景</string>
    <string name="intelligent_charging">智能充电</string>
    <string name="can_be_asked">使能问答</string>
    <string name="begin_time">开始时间</string>
    <string name="loop_time">循环次数</string>
    <string name="trigger_word">触发词</string>
    <string name="select_map">选择地图</string>
    <string name="preview">预览</string>
    <string name="question_setting">讲解内容设定</string>
    <string name="sports_files">运动中文件</string>
    <string name="image">图片</string>
    <string name="music">音频</string>
    <string name="video">视频</string>
    <string name="play_content">播放内容</string>
    <string name="audition">试听</string>
    <string name="guest_point_order_set">迎宾位置点顺序设定</string>
    <string name="name">名称</string>
    <string name="sports_play_word">运动中播报内容</string>
    <string name="target_point_word">目标点播报内容</string>
    <string name="target_point_files">目标点文件</string>
    <string name="points">路径点</string>
    <string name="moveing_head_angle">移动时头部角度</string>
    <string name="dev_mode">开发者模式</string>
    <string name="state">状态</string>
    <string name="self_charge_setting">回充图片设置</string>
    <string name="charge_faliure">充电失败</string>
    <string name="move_speed">行走速度</string>
    <string name="rotate_speed">旋转速度</string>
    <string name="bg_img">背景图片</string>
    <string name="charge_image_setting">回充图片设置</string>
    <string name="play_speed">播报语速</string>
    <string name="play_volume">播报音量</string>
    <string name="play_tone">播报音色</string>
    <string name="wake_up_time">唤醒时间</string>
    <string name="keyword">关键字</string>
    <string name="begin_voice_word">开始语音内容</string>
    <string name="begin_sport_files">开始运动文件</string>
    <string name="target_voice_word">目标点语音内容</string>

    <string-array name="led_color_list">
        <item>红色|#ff0000</item>
        <item>蓝色|#0000ff</item>
        <item>草莓色|#872657</item>
        <item>黄色|#ffff00</item>
        <item>青色|#00ffff</item>
        <item>绿色|#00ff00</item>
        <item>紫色|#a020f0</item>
        <item>紫罗兰色|#8a2be2</item>
    </string-array>

</resources>
