<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F0F3F6">
    <com.sineva.rosapidemo.view.ToolbarControl
        android:id="@+id/toorbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="20dp"
        app:titleText="@string/base_setting"
        android:gravity="center"
        >
    </com.sineva.rosapidemo.view.ToolbarControl>

    <LinearLayout style="@style/wrap_layout" >
        <!-- 上圆角-->
        <LinearLayout style="@style/top_layout"
            android:id="@+id/lin_bg_img"
            >
            <TextView style="@style/usertext" android:text="@string/bg_img" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <!-- 分割线 -->
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_wifi_set"
            >
            <TextView style="@style/usertext" android:text="@string/wifi_setting" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <View style="@style/bg_line"/>

        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_charge_img_set"
            >
            <TextView style="@style/usertext" android:text="@string/charge_image_setting" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

        <View style="@style/bg_line"/>

        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_led_set"
            >
            <TextView style="@style/usertext" android:text="@string/led_setting" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_move_speed"
            >
            <TextView style="@style/usertext" android:text="@string/move_speed" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_rotate_speed"
            >
            <TextView style="@style/usertext" android:text="@string/rotate_speed" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_broadcast_speed"
            >
            <TextView style="@style/usertext" android:text="@string/play_speed" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_broadcast_volume"
            >
            <TextView style="@style/usertext" android:text="@string/play_volume" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_broadcast_tone"
            >
            <TextView style="@style/usertext" android:text="@string/play_tone" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 无圆角-->
        <LinearLayout style="@style/mid_layout"
            android:id="@+id/lin_wakeup_time"
            >
            <TextView style="@style/usertext" android:text="@string/wake_up_time" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 下圆角-->
        <LinearLayout style="@style/bottom_layout"
            android:id="@+id/lin_coder_mode"
            >
            <TextView style="@style/usertext" android:text="@string/dev_mode" />
            <ImageView style="@style/img_arrow"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
