<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sineva.rosapidemo.activity.GuideSettingActivity">
    <com.sineva.rosapidemo.view.ToolbarControl
        android:id="@+id/toorbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="20dp"
        app:titleText="@string/question_setting"
        android:gravity="center"
        >
    </com.sineva.rosapidemo.view.ToolbarControl>
    <!-- 分割线 -->
    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/bg_line"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        >
        <ListView
            android:background="@drawable/bg_layout_shape"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="20dp"
            android:id="@+id/lv_sence_list"
            android:layout_height="match_parent">

        </ListView>
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/name"
                    android:textSize="36sp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_scene"
                    android:layout_weight="5"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_height="75dp"

                    />
            </LinearLayout>
            <TextView
                android:text="@string/sports_play_word"
                android:textSize="36sp"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_sport_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:background="@drawable/edit_shape"
                />
            <Button
                android:id="@+id/btn_sport_play"
                android:text="@string/audition"
                android:textSize="30sp"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sports_files"
                    android:textSize="36sp"
                    android:gravity="left"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_move_photo"
                    android:text="@string/image"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_move_music"
                    android:text="@string/music"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_move_video"
                    android:text="@string/video"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_move_play"
                    android:text="@string/preview"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:text="@string/target_point_word"
                android:textSize="36sp"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_target_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:background="@drawable/edit_shape"
                />
            <Button
                android:id="@+id/btn_point_play"
                android:text="@string/audition"
                android:textSize="30sp"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/target_point_files"
                    android:textSize="36sp"
                    android:gravity="left"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_target_photo"
                    android:text="@string/image"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_target_music"
                    android:text="@string/music"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_target_video"
                    android:text="@string/video"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_target_play"
                    android:text="@string/preview"
                    android:textSize="30sp"
                    android:layout_margin="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
           <!-- <LinearLayout
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent">-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:text="@string/points"
                    android:textSize="36sp"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/sp_path_point"
                    android:layout_weight="1"
                    android:text="1"
                    android:textSize="36sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/moveing_head_angle"
                    android:textSize="36sp"
                    android:gravity="left"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/sp_move_head_angle"
                    android:text="2"
                    android:textSize="36sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:gravity="bottom"
                >
                <Button
                    android:id="@+id/btn_cancle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textSize="36sp"
                    android:layout_weight="1" />
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textSize="36sp"
                    android:layout_weight="1" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
