<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F0F3F6"

    >
    <com.sineva.rosapidemo.view.ToolbarControl
        android:id="@+id/toorbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="20dp"
        app:titleText="@string/charge_check"
        android:gravity="center"
        >
    </com.sineva.rosapidemo.view.ToolbarControl>
    <View style="@style/bg_line"/>
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_margin="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/thing"
            android:textSize="45sp"
            android:drawableLeft="@drawable/icon_check"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/people"
            android:textSize="45sp"
            android:drawableLeft="@drawable/icon_check"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/distance"
                android:textSize="45sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <EditText
                android:layout_width="100dp"
                android:layout_height="match_parent" />
            <TextView
                android:text="m"
                android:textSize="45sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:src="@drawable/img_target_check"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>