<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context=".activity.MapActivity">
    <com.sineva.rosapidemo.view.ToolbarControl
        android:id="@+id/toorbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="20dp"
        app:titleText="@string/initial_point_setting"
        android:gravity="center"
        >
    </com.sineva.rosapidemo.view.ToolbarControl>
    <View
        android:layout_marginBottom="20dp"
        style="@style/bg_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/initial_point"
            android:textSize="45sp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="top|center"
            android:id="@+id/btn_set_initial_point"
            android:layout_margin="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_margin="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="fitXY"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/robot_bg4"
                />
            <LinearLayout
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="600dp">
                <Button
                    android:id="@+id/btn_cancle"
                    android:layout_weight="1"
                    android:text="@string/cancle"
                    android:textSize="45sp"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:textSize="45sp"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
