<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fdfdfd"
    >
    <com.sineva.rosapidemo.view.ToolbarControl
        android:id="@+id/toorbar"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="20dp"
        app:titleText="@string/wifi_setting"
        android:gravity="center"
        >
    </com.sineva.rosapidemo.view.ToolbarControl>
    <View style="@style/bg_line"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:gravity="bottom"
            android:layout_alignParentLeft="true"
            android:text="@string/wireless_network"
            android:textSize="60sp"
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.sineva.rosapidemo.view.SwitchButton
            android:id="@+id/sb_devmode"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sb_show_indicator="false"
            android:layout_margin="20dp"
            app:sb_checked="false"/>

    </RelativeLayout>
    <TextView
        android:text="@string/select_network"
        android:textSize="45sp"
        android:padding="20dp"
        android:gravity="left"
        android:background="#dad5d5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/lv_wifi_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>